# controlgate

./: .controlgate.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-skills.yml  release.yml
docs/: design.md
docs/gates/gate-01-secrets/: design.md  implementation.md
docs/gates/gate-02-crypto/: design.md  implementation.md
docs/gates/gate-03-iam/: design.md  implementation.md
docs/gates/gate-04-sbom/: design.md  implementation.md
docs/gates/gate-05-iac/: design.md  implementation.md
docs/gates/gate-06-input-validation/: design.md  implementation.md
docs/gates/gate-07-audit/: design.md  implementation.md
docs/gates/gate-08-change-control/: design.md  (+1 more)
docs/plans/: 2026-02-27-full-scan-and-init-design.md  2026-02-27-full-scan-and-init-implementation.md  2026-02-27-gate-gap-fixes.md  2026-02-27-gates-9-18-implementation.md  2026-02-27-gates-gap-analysis.md  2026-02-27-new-gates-design.md  2026-02-27-per-gate-docs-design.md  2026-02-27-per-gate-docs-implementation.md  2026-02-28-auto-version-bump-design.md  2026-02-28-auto-version-bump-implementation.md
hooks/: bump_version.py  github_action.yml  pre_commit.py
schemas/: verdict_schema.json
skills/claude_code/: .clauderules
skills/codeex/: instructions.md
skills/codex/: instructions.md
skills/cursor/: .cursorrules
src/controlgate/: __init__.py  __main__.py  catalog.py  catalog_downloader.py  config.py  diff_parser.py  engine.py  init_command.py  models.py
tests/: conftest.py  test_bump_version.py  test_catalog.py  test_catalog_downloader.py  test_cli.py  test_config.py  test_coverage_gaps.py  test_diff_parser.py  test_engine.py  test_final_coverage.py  test_full_scan.py  test_init_command.py  test_reporters.py
tests/test_gates/: test_aiml_gate.py  test_api_gate.py  test_container_gate.py  test_crypto_gate.py  test_deps_gate.py  test_iac_gate.py  test_iam_gate.py  test_incident_gate.py  test_input_gate.py  test_license_gate.py  test_memsafe_gate.py  test_observability_gate.py  test_privacy_gate.py  test_resilience_gate.py  test_secrets_gate.py
(+46 files in other folders)
