[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "controlgate"
version = "0.1.3"
description = "NIST RMF Cloud Security Hardening — Pre-Commit & Pre-Merge Compliance Gate"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["nist", "security", "compliance", "pre-commit", "cloud", "rmf", "800-53"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sadayamuthu/controlgate"
Repository = "https://github.com/sadayamuthu/controlgate"
Issues = "https://github.com/sadayamuthu/controlgate/issues"
Documentation = "https://github.com/sadayamuthu/controlgate#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
controlgate = "controlgate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
controlgate = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["controlgate"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["controlgate"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
